[package]
name = "wasm-compiler"
version = "0.1.0"
authors = ["Simon Hausmann <simon.hausmann@sixtyfps.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"

[[bin]]
name = "sixtyfps-wasm-compiler"
path = "main.rs"
